--- a/tasks/scumblr-add-user.yml
+++ b/tasks/scumblr-add-user.yml
@@ -14,6 +14,7 @@
     - restart rails server
     - restart sidekiq - systemd
     - restart rails/scumblr - systemd
-  when: not "{{ user }}" in userall.stdout
+  when: not user in userall.stdout
+#  when: not "{{ user }}" in userall.stdout
 #- debug: var=railsadduser
 #  no_log: True
