--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -3,38 +3,7 @@
 
 - name: apt | scumblr packages dependencies
   apt: name={{item}} state=present update_cache=yes cache_valid_time=3600
-  with_items:
-    - git
-    - libxml2-dev
-    - build-essential
-    - bison
-    - openssl
-    - zlib1g
-    - libxslt1.1
-    - libssl-dev
-#    - libxslt-dev      ## Note: it's an alias and requesting it, alter apt output in a way ansible believes task is always in changed state. BUG/FIXME!
-    - libxslt1.1
-    - libxslt1-dev
-    - libxml2
-    - libffi-dev
-    - libpq-dev
-    - autoconf
-    - libc6-dev
-    - libreadline6-dev
-    - zlib1g-dev
-    - libtool
-    - libsqlite3-dev
-    - libcurl3
-    - libmagickcore-dev
-    - ruby-build
-#    - ruby-dev
-    - libmagickwand-dev
-    - imagemagick
-#    - bundler
-    - redis-server
-    - acl
-    - debianutils
-    - nginx
+  with_items: "{{ scumblr_pkgs }}"
   register: deps
 #- debug: var=deps
 
