--- a/.kitchen.vagrant.yml
+++ b/.kitchen.vagrant.yml
@@ -33,6 +33,7 @@ suites:
     run_list:
     attributes:
     includes:
+      - ubuntu-18.04
       - ubuntu-16.04
       - ubuntu-14.04
       - centos-7.1
